--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,6 +40,7 @@ html,
 body {
   height: 100vh;
   background: var(--background);
+  /* background: #ccc; */
   color: var(--white);
   font-family: var(--dm-sans);
   text-rendering: optimizelegibility;
