--- a/src/components/Lead.module.css
+++ b/src/components/Lead.module.css
@@ -120,6 +120,10 @@
         padding: 14rem 0rem;
     }
 
+    .container div p {
+        font-size: 2.6rem;
+    }
+
     .container form input {
         width: 82%;
     }
