--- a/src/components/Lead.module.css
+++ b/src/components/Lead.module.css
@@ -47,8 +47,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-    width: 100%;
  }
 
  .container form input {
@@ -122,6 +120,10 @@
 
     .container div p {
         font-size: 2.6rem;
+    }
+
+    .container form {
+        width: 100%;
     }
 
     .container form input {
